# ICV

./: .editorconfig  .gitignore  .prettierignore  README.md  dfx.json  package-lock.json  package.json  tarpaulin.toml
.github/workflows/: coverage.yml
backend/: Cargo.toml
backend/src/: controllers.rs  entities.rs  knowledge.rs  lib.rs  service.rs  utils.rs
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/chat/: config.ts  index.tsx
frontend/src/components/ui/: button.tsx
frontend/src/components/ui/chat/: chat-input.tsx  chat-message-list.tsx  expandable-chat.tsx
frontend/src/components/ui/chat/hooks/: useAutoScroll.tsx
frontend/src/hooks/: useChatStore.ts
frontend/src/types/: chat.ts
