[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unexpected_cfgs = {level = "allow", check-cfg = ['cfg(rust_analyzer)']}

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.13"
ic-cdk = "0.17.1"
ic-llm = "0.4.0"
ic-stable-structures = "0.6.8"
serde = "1.0.219"
serde_bytes = "0.11.17"
ciborium = "0.2.2"
lopdf = "0.36.0"
tiktoken-rs = "0.6.0"
anyhow = "1.0.97"
itertools = "0.14.0"
bitcode = "0.6.6"
thiserror = "2.0.12"
